# CSC2222-PapiDemo

./: CMakeLists.txt  MemoryLatencyAndPotentialGain.cpp  README.md  high_level_demo.cpp  low_level_demo.cpp  low_level_demo.cpp.in  main.cpp  papi_utils.h  papi_utls.h
cmake/: FindPAPI.cmake
